<resources>
    <string name="app_name">BRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_category">Add category</string>
    <string name="category_image">Image category</string>
    <string name="from_camera">From the camera</string>
    <string name="from_storage">From the storage</string>
    <string name="enter_category_name">Enter a category name</string>
    <string name="choose_category">Choose a category</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete_category">Delete a category</string>
    <string name="delete_the_category">Delete the category</string>
    <string name="settings">Settings</string>
    <string name="enter_recipe_name">Enter a recipe name</string>
    <string name="enter_preparation">Enter a preparation time</string>
    <string name="enter_time_cooking">Enter a cooking time</string>
    <string name="enter_yield">Enter servings</string>
    <string name="enter_note">Enter a note</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add_procedure">Add the procedure</string>
    <string name="empty_notes">Note is empty</string>
    <string name="ingredients_empty">Ingredients are empty</string>
    <string name="select_category">Select the category</string>
    <string name="add_note">Add a note</string>
    <string name="procedure_is_empty">Procedure is empty</string>
    <string name="fill_in_category_name">Please fill in the category name</string>
    <string name="edit_categories">Edit categories</string>
    <string name="stop_edit_categories">Stop editing categories</string>
    <string name="fill_in_all">Fill in all the necessary information</string>
    <string name="time">Time:</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="min" translatable="false">%d min</string>
    <string name="yield">%d servings</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="recipes">Recipes</string>
    <string name="list_off">List off</string>
    <string name="no_items">No items</string>
    <string name="no_categories">No categories</string>
    <string name="recipes_image">Recipes</string>
    <string name="recipe_name">Recipe name</string>
    <string name="preparation">Preparation</string>
    <string name="cooking">Cooking</string>
    <string name="yield_image">Yield</string>
    <string name="star_one">Star one</string>
    <string name="star_two">Star two</string>
    <string name="star_three">Star three</string>
    <string name="star_four">Star four</string>
    <string name="star_five">Star five</string>
    <string name="note">Note</string>
    <string name="ingredients">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="category">Category</string>
    <string name="star" translatable="false">Star</string>
    <string name="no_image">No image</string>
    <string name="check" translatable="false">Check</string>
    <string name="wp_detail">Detail</string>
    <string name="wp_ingredients">Ingredients</string>
    <string name="wp_procedure">Procedure</string>
    <string name="time_min">Time: %s min</string>
    <string name="delete_recipe_name">Delete recipe: %s</string>
    <string name="do_you_want_delete_recipe_name">Do you want to delete this recipe: %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_category_move_recipes">Select the category where the recipes will be moved.</string>
    <string name="category_deleted">Deleted: %s</string>
    <string name="undo">Undo</string>
    <string name="denied_permission">Denied, you can change it in settings</string>
    <string name="camera_permission_required">Permission is required for Camera access</string>
    <string name="camera_is_denied">Camera cannot be used because Camera access is denied.</string>
    <string name="ok">OK</string>
    <string name="categories">Categories</string>
    <string name="recipe_detail">Recipe detail</string>
    <string name="add_recipe">Add new recipe</string>
    <string name="edit_category">Edit category</string>
    <string name="recipes_colon">Recipes:</string>
</resources>