<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="350dp"
    tools:context=".fragments.category.EditCategoryFragment">

    <ImageView
        android:id="@+id/categoryImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/category_image"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image_available"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/from_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameEditText" />

    <Button
        android:id="@+id/storageButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/from_storage"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameEditText" />

    <EditText
        android:id="@+id/categoryNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/enter_category_name"
        app:layout_constraintTop_toBottomOf="@+id/categoryImageView" />

    <ImageView
        android:id="@+id/saveImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="12dp"
        android:src="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/save" />

    <ImageView
        android:id="@+id/cancelImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="12dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>