<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.add.AddNoteDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12sp"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/closeImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/saveImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/save"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:hint="@string/add_note"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@color/white"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headConstraintLayout"
        android:importantForAutofill="no" />


</androidx.constraintlayout.widget.ConstraintLayout>