<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_super_light"
    tools:context=".fragments.recipe.AddRecipeFragment">

    <ImageView
        android:id="@+id/recipeImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/no_image_available"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageFromCameraImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/from_camera" />

    <ImageView
        android:id="@+id/imageFromStorageImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="160dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_storage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/from_camera" />

    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImageView"
        app:layout_constraintStart_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_rename"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/recipeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:hint="@string/enter_recipe_name"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/preparationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLinearLayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_time"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/preparationEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:hint="@string/enter_preparation"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cookingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparationLinearLayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_cooking"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/cookingEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:hint="@string/enter_time_cooking"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yieldLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookingLinearLayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_yield"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/yieldEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:hint="@string/enter_yield"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ratingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yieldLinearLayout">

        <ImageView
            android:id="@+id/starOneImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_star_border"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/starTwoImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_star_border"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/starThreeImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_star_border"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/starFourImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_star_border"
            app:tint="@color/gray" />

        <ImageView
            android:id="@+id/starFiveImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="12dp"
            android:src="@drawable/ic_star_border"
            app:tint="@color/gray" />

    </LinearLayout>

    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:gravity="start|top"
        android:hint="@string/enter_note"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingLinearLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>